--- a/index.html
+++ b/index.html
@@ -2,34 +2,57 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Appliances</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-
-<header>
+<!-- header -->
+<header class="header">
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <div><button></button></div>
-                <img src="assets/img/logo.png" alt="logo">
-                <div class="call-back"></div>
+            <div class="col-2">
+                    <span class="hamburger-line">
+                        <span class="hamburger-line__item"></span>
+                    </span>
+            </div>
+
+            <div class="col-8 header__logo">
+                <img src="assets/img/logo.png" alt="logo" style="width: 100%">
+            </div>
+
+            <div hidden>
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </div>
+
+            <div class="col-2 header__callback">
+                <a href="tel:0800808080">
+                    <img src="assets/img/icon/phone.svg" alt="callback" width="57" height="57">
+                </a>
             </div>
         </div>
     </div>
 </header>
+<!-- End header -->
 
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-3">1</div>
-            <div class="col-3">2</div>
-            <div class="col-3">3</div>
-            <div class="col-3">4</div>
-        </div>
-    </div>
-</section>
+<!--<section>-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-3">1</div>-->
+<!--            <div class="col-3">2</div>-->
+<!--            <div class="col-3">3</div>-->
+<!--            <div class="col-3">4</div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 
 </body>
 </html>
