dev common style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Appliances</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -43,16 +45,77 @@
 </header>
 <!-- End header -->
 
-<!--<section>-->
-<!--    <div class="container">-->
-<!--        <div class="row">-->
-<!--            <div class="col-3">1</div>-->
-<!--            <div class="col-3">2</div>-->
-<!--            <div class="col-3">3</div>-->
-<!--            <div class="col-3">4</div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
+
+<div class="first-section">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-8" style="text-align:center;">
+                <h1 class="first-section__title">Заробляйте на продажі побутової техніки</h1>
+                <div class="first-section__subtitle">Понад 3000 товарів в наявності. Знижка на доставку до 15%.
+                    Відправка наложкою в день замовлення
+                </div>
+                <a class="btn" href="#">Переглянути каталог</a>
+            </div>
+            <div class="col-12 first-section__img">
+                <img src="assets/img/appliances.png" alt="appliances">
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- -->
+<div class="for-whom section section-green">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 for-whom__wrap">
+                <div class="for-whom__wrap--title section-title">Для кого підходить наша пропозиція</div>
+            </div>
+            <div class="col-8 for-whom__wrap">
+                <img src="assets/img/online_store.png" alt="">
+                <p>Для інтернет-магазинів</p>
+            </div>
+            <div class="col-8 for-whom__wrap">
+                <img src="assets/img/client_opt.png" alt="">
+                <p>Для клієнтів, які бажають працювати на умовах оптових закупок</p>
+            </div>
+            <div class="col-8 for-whom__wrap">
+                <img src="assets/img/dropshipping.png" alt="">
+                <p>Для дропшиперів</p>
+            </div>
+            <div class="col-8 for-whom__wrap">
+                <img src="assets/img/client_ret.png" alt="">
+                <p>Для власників мереж та точок продажу побутової техніки</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- -->
+<div class="callback section section-dark">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <form class="callback__form" action="">
+
+                    <div class="input-group">
+                        <!--<label for=""></label>-->
+                        <input class="input-item" type="text" name="name" placeholder="Ваше ім'я">
+                    </div>
+
+                    <div class="input-group">
+                        <!--<label for=""></label>-->
+                        <input class="input-item" type="phone" name="phone" placeholder="Ваш номер телефону">
+                    </div>
+
+                    <button type="submit" class="btn">Отримати пропозицію</button>
+
+                </form>
+            </div>
+        </div>
+    </div>
+
+</div>
 
 </body>
 </html>
